[package]
name = "toonify"
version = "1.0.0"
description = "Toonify API client"
authors = ["XXIV"]
homepage = "https://github.com/thechampagne/toonify-rust"
repository = "https://github.com/thechampagne/toonify-rust"
keywords = ["pictures", "media", "entertainment", "photos", "api"]
categories = ["api-bindings"]
readme = "README.md"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "multipart"] }
json = "0.12.4"